# mxproc

./: README.md  pyproject.toml
mxproc/: __init__.py  command.py  common.py  experiment.py  importer.py  log.py  scripts.py  utils.py  xtal.py
mxproc/engines/dials/: __init__.py
mxproc/engines/xds/: __init__.py  indexing.py  io.py  parser.py  parsers.py  stats.py
mxproc/engines/xds/data/: correct.yml  idxref.yml  integrate.yml  spots.yml
mxproc/engines/xds/parser/: __init__.py  pointless.py
mxproc/engines/xds/parser/data/: correct.yml  idxref.yml  integrate.yml  xdsstat.yml
mxproc/programs/: dozor.py  raddose.py
mxproc/reporting/: __init__.py  generic.py  screening.py  text.py
mxproc/reporting/data/: report.html  report.min.css  report.scss
test/: test_common.py
