[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mxproc"
dynamic = ["version"]
license = "MIT"
description = "MX Automated Data Processing Pipeline"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["Data Processing Pipeline", "MX", "AutoProcess"]
authors = [
    {name = "Michel Fodje", email = "michel4j@gmail.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mxio",
    "numpy",
    "pyyaml",
    "tqdm",
    "pandas",
    "gnuplot",
    "prettytable",
    "vg",
    "scipy"
]

[project.urls]
Homepage = "https://github.com/michel4j/mxproc"


[project.scripts]


[tool.flit.sdist]
exclude = [".gitignore"]
include = ["docs/"]
